--- a/flaskbiob/templates/Post_Review.html
+++ b/flaskbiob/templates/Post_Review.html
@@ -38,7 +38,7 @@
                             <a href="{{ url_for('posts.updatepostPage', post_id=post.id) }}" class="btn btn-dark" role="button">Edit</a>
                             {% if review %}
                             {% else %}
-                            <a href="{{ url_for('reviews.newreviewPage', post_id=post.id) }}" class="btn btn-dark ml-3" role="button">New Route for Post</a>
+                            <a href="{{ url_for('reviews.newreviewPage', post_id=post.id) }}" class="btn btn-dark ml-3" role="button">New Review for Post</a>
                             {% endif %}
                             <button type="button" class="btn btn-danger ml-3" data-toggle="modal" data-target="#deleteModal">Delete</button>
                             <!-- Modal -->
