--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -25,6 +25,9 @@
                     <li class="nav-item {% if request.endpoint == 'routes.routesPage' %} active {% endif %}">
                     <a class="nav-link" href="{{ url_for('routes.routesPage') }}">Routes</a>
                   </li>
+                    <li class="nav-item {% if request.endpoint == 'reviews.reviewPage' %} active {% endif %}">
+                    <a class="nav-link" href="{{ url_for('reviews.reviewPage') }}">Reviews</a>
+                  </li>
                   <li class="nav-item {% if request.endpoint == 'main.aboutPage' %} active {% endif %}">
                     <a class="nav-link" href="{{ url_for('main.aboutPage') }}">About</a>
                   </li>
