--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -76,6 +76,7 @@
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.homePage') }}">Articles</a>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.aboutPage') }}">About</a>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('routes.routesPage') }}">Routes</a>
+                        <a class="text-light text-decoration-none mr-2" href="{{ url_for('reviews.reviewPage') }}">Reviews</a>
                         <a class="text-light" href="">Links</a>
                     </div>
                     <div class="col-md-2"></div>
