--- a/flaskbiob/templates/Home.html
+++ b/flaskbiob/templates/Home.html
@@ -4,12 +4,12 @@
         <div class="col-lg-8" id="main">
             {% for post in posts.items %}
             <div class="card mb-3">
-              <img src="{{ url_for('static', filename='post_pics/' + post.post_image) }}" class="card-img-top" alt="...">
+              <a href="{{ url_for('posts.postPage', post_id = post.id) }}"><img src="{{ url_for('static', filename='post_pics/' + post.post_image) }}" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
                 <p class="card-text">{{ post.leader }}</p>
                   <a href="{{ url_for('posts.postPage', post_id = post.id) }}" class="btn btn-dark">Read More</a>
-                  <p class="card-text"><small class="text-muted">by <a href="{{ url_for('users.userpostPage', username=post.author.username) }}">{{ post.author.username }}</a></small></p>
+                  <p class="card-text"><small class="text-muted">by <a class="custom-link" href="{{ url_for('users.userpostPage', username=post.author.username) }}">{{ post.author.username }}</a></small></p>
               </div>
             </div>
             {% endfor %}
