--- a/flaskbiob/templates/Reviews.html
+++ b/flaskbiob/templates/Reviews.html
@@ -17,14 +17,14 @@
             </button>
             <div class="collapse mb-1" id="componentsDropdown">
                 <div class="border p-2">
-                    <p><a href="#">Drivetrain</a></p>
-                    <p><a href="#">Wheels</a></p>
-                    <p><a href="#">Tyres</a></p>
-                    <p><a href="#">Brakes and Pads</a></p>
-                    <p><a href="#">Saddles</a></p>
-                    <p><a href="#">Pedals</a></p>
-                    <p><a href="#">Bars, Stems and Seatposts</a></p>
-                    <p class="mb-0"><a href="#">Other</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - drivetrain') }}">Drivetrain</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - wheels') }}">Wheels</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - tyres') }}">Tyres</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - brakes') }}">Brakes and Pads</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - saddles') }}">Saddles</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - Pedals') }}">Pedals</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Components - bars, stems and posts') }}">Bars, Stems and Seatposts</a></p>
+                    <p class="mb-0"><a href="Components - other">Other</a></p>
                 </div>
             </div>
             <button class="btn btn-block btn-dark mb-2" type="button" data-toggle="collapse" data-target="#accessoriesDropdown" aria-expanded="false" aria-controls="collapseExample">
@@ -32,11 +32,11 @@
             </button>
             <div class="collapse mb-1" id="accessoriesDropdown">
                 <div class="border p-2">
-                    <p><a href="#">GPS & Computer</a></p>
-                    <p><a href="#">Power Meters</a></p>
-                    <p><a href="#">Lights</a></p>
-                    <p><a href="#">Trainers</a></p>
-                    <p class="mb-0"><a href="#">Other</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Accessories - GPS & Computers') }}">GPS & Computer</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Accessories - Power Meters') }}">Power Meters</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Accessories - Lights') }}">Lights</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Accessories - Trainers') }}">Trainers</a></p>
+                    <p class="mb-0"><a href="{{ url_for('reviews.reviewtypePage', review_type='Accessories - Other') }}">Other</a></p>
                 </div>
             </div>
             <button class="btn btn-block btn-dark mb-2" type="button" data-toggle="collapse" data-target="#clothingDropdown" aria-expanded="false" aria-controls="collapseExample">
@@ -44,13 +44,14 @@
             </button>
             <div class="collapse mb-1" id="clothingDropdown">
                 <div class="border p-2">
-                    <p><a href="#">Tops</a></p>
-                    <p><a href="#">Bottoms</a></p>
-                    <p><a href="#">Base layers</a></p>
-                    <p><a href="#">Jackets</a></p>
-                    <p><a href="#">Shoes</a></p>
-                    <p><a href="#">Glasses</a></p>
-                    <p class="mb-0"><a href="#">Other</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Tops') }}">Tops</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Bottoms') }}">Bottoms</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Base') }}">Base layers</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Jackets') }}">Jackets</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Shoes') }}">Shoes</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Helmets') }}">Helmets</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Glasses') }}">Glasses</a></p>
+                    <p class="mb-0"><a href="{{ url_for('reviews.reviewtypePage', review_type='Clothing - Other') }}">Other</a></p>
                 </div>
             </div>
             <button class="btn btn-block btn-dark mb-2" type="button" data-toggle="collapse" data-target="#workshopDropdown" aria-expanded="false" aria-controls="collapseExample">
@@ -58,10 +59,10 @@
             </button>
             <div class="collapse mb-1" id="workshopDropdown">
                 <div class="border p-2">
-                    <p><a href="#">Tools</a></p>
-                    <p><a href="#">Cleaning</a></p>
-                    <p><a href="#">Lubricant</a></p>
-                    <p class="mb-0"><a href="#">Other</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Workshop - Tools') }}">Tools</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Workshop - Cleaning') }}">Cleaning</a></p>
+                    <p><a href="{{ url_for('reviews.reviewtypePage', review_type='Workshop - Lubricant') }}">Lubricant</a></p>
+                    <p class="mb-0"><a href="{{ url_for('reviews.reviewtypePage', review_type='Workshop - Other') }}">Other</a></p>
                 </div>
             </div>
             <button class="btn btn-block btn-dark mb-2" type="button" data-toggle="collapse" data-target="#otherDropdown" aria-expanded="false" aria-controls="collapseExample">
@@ -83,13 +84,14 @@
             {% for review in reviews %}
             {% if loop.index % 2 != 0 %}
             <div class="card mb-3">
-                <img class="card-img-top" src="{{ url_for('static', filename='post_pics/' + review.post_image) }}" alt="Card image cap">
+                <a href="{{ url_for('posts.postPage', post_id=review.id) }}"><img class="card-img-top" src="{{ url_for('static', filename='post_pics/' + review.post_image) }}" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">{{ review.reviews.title }}</h5>
                     <p class="card-text">{{ review.leader }}</p>
                 </div>
                 <div class="card-body">
                     <a href="{{ url_for('posts.postPage', post_id=review.id) }}" class="btn btn-dark">Read More</a>
+                    <h4 class="review-price">£{{ "{:.2f}".format(review.reviews.rrp) }} </h4>
                 </div>
             </div>
             {% endif %}
@@ -99,13 +101,14 @@
             {% for review in reviews %}
             {% if loop.index % 2 == 0 %}
             <div class="card mb-3">
-                <img class="card-img-top" src="{{ url_for('static', filename='post_pics/' + review.post_image) }}" alt="Card image cap">
+                <a href="{{ url_for('posts.postPage', post_id=review.id) }}"><img class="card-img-top" src="{{ url_for('static', filename='post_pics/' + review.post_image) }}" alt="Card image cap"></a>
                 <div class="card-body">
                     <h5 class="card-title">{{ review.reviews.title }}</h5>
                     <p class="card-text">{{ review.leader }}</p>
                 </div>
                 <div class="card-body">
                     <a href="{{ url_for('posts.postPage', post_id=review.id) }}" class="btn btn-dark">Read More</a>
+                    <h4 class="review-price">£{{ "{:.2f}".format(review.reviews.rrp) }} </h4>
                 </div>
             </div>
             {% endif %}
