fixed no review message

--- a/flaskbiob/templates/Reviews.html
+++ b/flaskbiob/templates/Reviews.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </div>
-        {% if not reviews %}
+        {% if not reviews.items %}
         <div class="col-md-8">
             <h2>No Reviews Yet!</h2>
             <p>If You'd like to get in touch about a product please contact me here...</p>
