--- a/flaskbiob/templates/Home.html
+++ b/flaskbiob/templates/Home.html
@@ -13,8 +13,7 @@
               </div>
             </div>
             {% endfor %}
-            <hr>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center p-3">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination">
                         <li class="page-item {% if not posts.has_prev %}disabled{% endif %}"><a class="page-link" href="{{ url_for('main.homePage', page=1) }}">First</a></li>
