--- a/flaskbiob/templates/Routes.html
+++ b/flaskbiob/templates/Routes.html
@@ -215,7 +215,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for route in my_routes %}
+                {% for route in my_routes.items %}
                     <tr>
                         <th scope="row"><a href="{{ url_for('posts.postPage', post_id=route.post) }}" class="custom-link">{{ route.title }}</a></th>
                         <td>{{ route.region }}</td>
@@ -230,5 +230,19 @@
                 </tbody>
             </table>
         </div>
+    </div>
+    <div class="d-flex justify-content-center p-3">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item {% if not my_routes.has_prev %}disabled{% endif %}"><a class="page-link" href="{{ url_for('routes.routesPage', page=1) }}">First</a></li>
+                <li class="page-item {% if not my_routes.has_prev %}disabled{% endif %}"><a class="page-link" href="{{ url_for('routes.routesPage', page=my_routes.prev_num) }}">Previous</a></li>
+                {% for page_num in my_routes.iter_pages() %}
+                {% if page_num %}
+                <li class="page-item {% if my_routes.page == page_num %}active{% endif %}"><a class="page-link" href="{{ url_for('routes.routesPage', page=page_num) }}">{{ page_num }}</a></li>
+                {% endif %}
+                {% endfor %}
+                <li class="page-item {% if not my_routes.has_next %}disabled{% endif %}"><a class="page-link" href="{{ url_for('routes.routesPage', page=my_routes.next_num) }}">Next</a></li>
+            </ul>
+        </nav>
     </div>
 {% endblock content %}
