added block to review page so that reviews appear in equal size columns

--- a/flaskbiob/static/main.css
+++ b/flaskbiob/static/main.css
@@ -173,3 +173,8 @@ btn-custom-red {
 btn-custom-red:hover {
     background: #bf4a4a;
 }
+
+.card-deck{
+    @include media-breakpoint-only(md) {
+    column-count: 2;
+}
