--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -86,8 +86,8 @@
                     <div class="col-md-8 border-bottom bdrbottom pb-3">
                         <div><h6 class="text-center">Social</h6></div>
                         <div class="d-flex justify-content-center">
-                            <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/Strava.png') }}" class="button-icon m-3"></a>
-                            <a href="" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon m-3"></a>
+                            <a href="https://www.strava.com/athletes/19285311" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/Strava.png') }}" class="button-icon m-3"></a>
+                            <a href="https://ridewithgps.com/users/2549182/" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon m-3"></a>
                             <a href="" class="image-link-gs"><img src="{{ url_for('static', filename='icons/small_instagram.png') }}" class="button-icon m-3"></a>
                         </div>
                     </div>
