--- a/flaskbiob/static/main.css
+++ b/flaskbiob/static/main.css
@@ -1,10 +1,9 @@
-body {
-  background: #fafafa;
-  color: #333333;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Bebas Neue";
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color: #444444;
+.bebas {
+  font-family: "Bebas Neue";
 }
 
 .bg-custom {
@@ -67,47 +66,13 @@ figcaption{
     color: #5e5e5e;
 }
 
-.footer-links{
-}
-
-#footer h6{
+#footer h5{
     color: #BF4A4A;
-    font-weight: 600;
 }
 
 .bdrbottom{
     border-width:2px !important;
     border-color: #8c1f1f !important;
-}
-
-.pagination > li > a
-{
-    background-color: white;
-    color: #444444;
-}
-
-.pagination > li > a:focus,
-.pagination > li > a:hover,
-.pagination > li > span:focus,
-.pagination > li > span:hover
-{
-    color: #5a5a5a;
-    background-color: #eee;
-    border-color: #ddd;
-}
-
-.pagination > .active > a
-{
-    color: white;
-    background-color: #8c1f1f !Important;
-    border: solid 1px #8c1f1f !Important;
-}
-
-.pagination > .active > a:hover
-{
-    background-color: #BF4A4A !Important;
-    border: solid 1px #BF4A4A;
-    border-color: #BF4A4A !Important;
 }
 
 .banner-top{
@@ -135,42 +100,11 @@ figcaption{
     color: #8c1f1f;
 }
 
-a:link {
-  color: #bf4a4a;
-}
-
-a:visited {
-  color: #bf4a4a;
-}
-
-a:hover {
-  color: #8c1f1f;
-  text-decoration: none;
-}
-
-a:active {
-  color: #8c1f1f;
-}
-
-
-a.btn-dark:link, a.btn-dark:visited{
-    color: #ffffff;
-}
-
-.btn-dark {
-    background: #14202a;
-}
-
-.btn-dark:hover {
-    background: #1b2a36;
-    border-color: #1b2a36;
-}
-
-btn-custom-red {
+.btn-custom-red {
     background: #8c1f1f;
 }
 
-btn-custom-red:hover {
+.btn-custom-red:hover {
     background: #bf4a4a;
 }
 
