--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Bebas+Neue&family=Roboto:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     <title>Bad Ideas on Bikes</title>
@@ -13,26 +14,26 @@
     <div class="banner-top"><img src="{{ url_for('static', filename='BIOB_Dark_Square_SM.jpg') }}" class="mx-auto d-block img-fluid"></div>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-custom mb-4">
         <div class="container">
-              <a class="navbar-brand" href="{{ url_for('main.homePage') }}">Bad Ideas On Bikes</a>
+              <a class="navbar-brand bebas" href="{{ url_for('main.homePage') }}">Bad Ideas On Bikes</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item {% if request.endpoint == 'main.homePage' %} active {% endif %}">
-                    <a class="nav-link" href="{{ url_for('main.homePage') }}">Articles <span class="sr-only">(current)</span></a>
+                    <a class="nav-link bebas" href="{{ url_for('main.homePage') }}">Articles <span class="sr-only">(current)</span></a>
                   </li>
                     <li class="nav-item {% if request.endpoint == 'routes.routesPage' %} active {% endif %}">
-                    <a class="nav-link" href="{{ url_for('routes.routesPage') }}">Routes</a>
+                    <a class="nav-link bebas" href="{{ url_for('routes.routesPage') }}">Routes</a>
                   </li>
                     <li class="nav-item {% if request.endpoint == 'reviews.reviewPage' %} active {% endif %}">
-                    <a class="nav-link" href="{{ url_for('reviews.reviewPage') }}">Reviews</a>
+                    <a class="nav-link bebas" href="{{ url_for('reviews.reviewPage') }}">Reviews</a>
                   </li>
                   <li class="nav-item {% if request.endpoint == 'main.aboutPage' %} active {% endif %}">
-                    <a class="nav-link" href="{{ url_for('main.aboutPage') }}">About</a>
+                    <a class="nav-link bebas" href="{{ url_for('main.aboutPage') }}">About</a>
                   </li>
                   <li class="nav-item {% if request.endpoint == 'main.linkPage' %} active {% endif %}">
-                    <a class="nav-link" href="#">Links</a>
+                    <a class="nav-link bebas" href="#">Links</a>
                   </li>
                 </ul>
                   <ul class="navbar-nav ml-auto">
@@ -69,10 +70,10 @@
     </div>
         <div class="row">
             <div class="container-fluid border-top" id="footer">
-                <div class="row footer-links text-center mt-2">
+                <div class="row footer-links text-center mt-4">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 border-bottom bdrbottom pb-3">
-                        <h6 class="text-center">Pages</h6>
+                        <h5 class="text-center">Pages</h5>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.homePage') }}">Articles</a>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('main.aboutPage') }}">About</a>
                         <a class="text-light text-decoration-none mr-2" href="{{ url_for('routes.routesPage') }}">Routes</a>
@@ -84,7 +85,7 @@
                 <div class="row mt-2">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 border-bottom bdrbottom pb-3">
-                        <div><h6 class="text-center">Social</h6></div>
+                        <div><h5 class="text-center">Social</h5></div>
                         <div class="d-flex justify-content-center">
                             <a href="https://www.strava.com/athletes/19285311" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/Strava.png') }}" class="button-icon m-3"></a>
                             <a href="https://ridewithgps.com/users/2549182/" class="image-link-gs mr-4"><img src="{{ url_for('static', filename='icons/RWGPS.png') }}" class="button-icon m-3"></a>
