--- a/flaskbiob/templates/BASE.html
+++ b/flaskbiob/templates/BASE.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Bebas+Neue&family=Roboto:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Bebas+Neue&family=Roboto+Condensed:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
@@ -96,7 +96,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 p-3">
-                        <p class="footer-text text-center copyright"><small>© Copyright Bad Ideas on Bikes - 2020</small></p>
+                        <p class="footer-text text-center copyright"><small>© Copyright Bad Ideas on Bikes - 2021</small></p>
                     </div>
                 </div>
             </div>
