--- a/flaskbiob/templates/Routes.html
+++ b/flaskbiob/templates/Routes.html
@@ -3,10 +3,10 @@
     <div class="row">
         <div class="col-md-12">
             <button class="btn btn-primary btn-sm m-2" type="button" data-toggle="collapse" data-target="#collapsefilters" aria-expanded="false" aria-controls="collapsefilters">
-                Filter
+                Filters
             </button>
             {% if filtered %}
-                <a href="{{ url_for('routes.routesPage') }}" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Clear Search</a>
+                <a href="{{ url_for('routes.routesPage') }}" class="btn btn-dark btn-sm active" role="button" aria-pressed="true">Clear Search</a>
             {% endif %}
             <div id="collapsefilters" class="panel-collapse collapse">
             <form method="POST" action="" enctype="multipart/form-data">
@@ -195,7 +195,7 @@
                 </div>
                     </fieldset>
                         <div class="form-group">
-                            {{form.submit(class="btn btn-outline-info")}}
+                            {{form.submit(class="btn btn-primary btn-sm")}}
                         </div>
                 </form>
                 </div>
